@@ -1,8 +1,8 @@
 //-----------------------------------------------------------------------------
 //
 // ImageLib Sources
-// Copyright (C) 2000-2002 by Denton Woods
-// Last modified: 05/22/2002 <--Y2K Compliant! =]
+// Copyright (C) 2000-2008 by Denton Woods
+// Last modified: 12/14/2008
 //
 // Filename: src-IL/src/il_targa.c
 //
@@ -580,9 +580,9 @@ ILboolean ilSaveTargaL(ILvoid *Lump, ILuint Size)
 // Internal function used to save the Targa.
 ILboolean iSaveTargaInternal()
 {
-	char		*ID = iGetString(IL_TGA_ID_STRING);
-	char		*AuthName = iGetString(IL_TGA_AUTHNAME_STRING);
-	char		*AuthComment = iGetString(IL_TGA_AUTHCOMMENT_STRING);
+	const char		*ID = iGetString(IL_TGA_ID_STRING);
+	const char		*AuthName = iGetString(IL_TGA_AUTHNAME_STRING);
+	const char		*AuthComment = iGetString(IL_TGA_AUTHCOMMENT_STRING);
 	ILubyte 	IDLen = 0, UsePal, Type, PalEntSize;
 	ILshort 	ColMapStart = 0, PalSize;
 	ILubyte		Temp;
